2005-03-05  Nathaniel Smith  <njs@codesourcery.com>

	* constants.{cc,hh}: Add new epochlen, epochlen_bytes constants.
	* vocab_terms.hh, vocab.hh: Add new epoch_data type.  Add predeclarations
	for it.
	* commands.cc (ls_epochs):
	* revision.cc (
	* database.hh:
	* database.cc: Update for epoch_data.  Add get_epoch, epoch_exists
	methods.
	* epoch.{cc,hh}: New files.
	* netsync.cc: Actually implement epochs-via-merkle code.
	
2005-03-04  Nathaniel Smith  <njs@codesourcery.com>

	* schema.sql (branch_epochs): Add 'hash' field.
	* schema_migration.cc: Fixup for.
	* database.cc (database): Change schemas.
	* tests/t_migrate_schema.at: Replace epoch db test case with one
	with new schema.

2005-03-03  Nathaniel Smith  <njs@codesourcery.com>

	* netsync.cc (session::id_to_epoch): New variable.
	(session::session): Create refinement and requested item tables
	for epochs.
	(rebuild_merkle_trees): Fill epoch merkle tree and id_to_epoch
	table.

	* netsync.cc (queue_confirm_cmd, process_confirm_cmd) 
	(dispatch_payload, rebuild_merkle_trees): 
	* netcmd.hh:
	* netcmd.cc (read_confirm_cmd_payload, write_confirm_cmd_payload):
	Remove epochs.

2005-02-27  Nathaniel Smith  <njs@codesourcery.com>

	* constants.cc:
	* revision.cc:
	* testsuite.at: 
	* commands.cc:
	* ChangeLog: Fixup after merge.

2005-02-27  Nathaniel Smith  <njs@codesourcery.com>

	* merkle_tree.hh (netcmd_item_type): Add epoch_item.
	* merkle_tree.cc (netcmd_item_type_to_string): Handle epoch_item.

	* packet.hh, packet.cc (struct packet_db_valve): New class.
	* netsync.cc (session): Use a valved writer.

2005-02-26  Nathaniel Smith  <njs@codesourcery.com>

	* merkle_tree.hh: Fix comment.
	Remove prototypes for non-existing functions.

2005-02-26  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_epoch_unidirectional.at: New test.
	* testsuite.at: Add it.

2005-02-26  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_epoch.at: Even more paranoid.
	* tests/t_epoch_server.at: New test.